# NakedSiteList

./: LICENSE  NakedSiteList.py  README.md
nakedSiteList_package/: README.md  pyproject.toml
nakedSiteList_package/nakedSiteList_package/: __init__.py  nakedSiteListFunctions.py
nakedSiteList_package/nakedSiteList_package.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
