[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "nakedSiteList_package"
version = "0.1.0"
authors = [{ name = "Tiara Mathur", email = "mathurtiara@gmail.com" }]
description = "A package with functions for determining towers with no active or planned tenants, called 'Naked Sites'. Naked Sites should be prioritized in leasing out or decommissioning."
readme = "README.md"
requires-python = ">=3.7"

[project.urls]
Homepage = "https://github.com/tiaramathur/nakedSiteList_package"
